--- a/Personal_Project_Data_Mining_(CVM).ipynb
+++ b/Personal_Project_Data_Mining_(CVM).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPW6Y4doUXZ0e3eNFTPnyoL",
+      "authorship_tag": "ABX9TyONLXUT54RKKNDVwqKHm/F5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5453,11 +5453,20 @@
         "\n",
         "Além disso, quanto maior e mais sólida a empresa, melhor é a qualidade dos dados. Para garantir a integridade da base, foi implementado um filtro inicial para excluir empresas muito pequenas. É importante destacar que nem todas as empresas com capital aberto estão listadas em bolsa. Após a aplicação do filtro, restaram 846 empresas, das 1131 inicialmente consideradas, no período entre 2011 e 2022. Mais filtros podem ser aplicados.\n",
         "\n",
-        "Por fim, a base de dados está pronta para a próxima etapa: **Tratamentos dos dados ou Featuring Engineer.**"
+        "Por fim, os indicadores foram calculados para uma ideia inicial, porém, seria interessante deixá-los para depois, sendo assim, a base de dados está pronta para etapa seguinte : **Tratamentos dos dados ou Featuring Engineer.**"
       ],
       "metadata": {
         "id": "e3ys1LBO_qzg"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "s-sxFQB3fbJo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
