--- a/Personal_Project_Data_Mining_(CVM).ipynb
+++ b/Personal_Project_Data_Mining_(CVM).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN58wp8efO6pb2W0R0+ZWro",
+      "authorship_tag": "ABX9TyOlf4UCcmI8/EcJhxOR6+Tx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6688,7 +6688,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#df.to_csv('balanço_empresas_2011-2022.csv', index=True, header = True)\n",
+        "df.to_csv('balanço_empresas_2011-2022.csv', index=True, header = True)\n",
         "df2.to_csv('indicadores_empresas_2011-2022.csv', index=True, header = True)"
       ],
       "metadata": {
@@ -6704,7 +6704,7 @@
         "\n",
         "O tratamento para a mineração adequada da base de dados foi realizado de forma meticulosa, abordando todas as possibilidades. Durante o desenvolvimento, foram identificadas diversas inconsistências na mineração de dados, mas mesmo assim, foi possível alcançar o principal objetivo: garantir que não houvesse nenhum dado \"NaN\" de empresas relevantes na base (apenas duas empresa apresentaram \"NaN\"), resultante de problemas na divulgação de resultados. Vale ressaltar que, apesar disso, ainda é necessário realizar o Feature Engineering para aprimorar a base de dados.\n",
         "\n",
-        "Além disso, quanto maior e mais sólida a empresa, melhor é a qualidade dos dados. Para garantir a integridade da base, foi implementado um filtro inicial para excluir empresas muito pequenas. É importante destacar que nem todas as empresas com capital aberto estão listadas em bolsa. Após a aplicação do filtro, restaram 846 empresas, das 1131 inicialmente consideradas, no período entre 2011 e 2022. Mais filtros podem ser aplicados.\n",
+        "Além disso, quanto maior e mais sólida a empresa, melhor é a qualidade dos dados. Para garantir a integridade da base, foi implementado um filtro inicial para excluir empresas muito pequenas. É importante destacar que nem todas as empresas com capital aberto estão listadas em bolsa. Após a aplicação do filtro, restaram 762 empresas, das 1131 inicialmente consideradas, no período entre 2011 e 2022. Mais filtros podem ser aplicados.\n",
         "\n",
         "Por fim, os indicadores foram calculados para uma ideia inicial, porém, seria interessante deixá-los para depois, sendo assim, a base de dados está pronta para etapa seguinte : **Tratamentos dos dados ou Featuring Engineer.**"
       ],
